フッターのコピーライトに現在年を表示

--- a/_assets/pug/common/_footer.pug
+++ b/_assets/pug/common/_footer.pug
@@ -4,6 +4,10 @@ footer.l-footer.p-footer
       ul
         each page in pages
           li: a(href=page.slug)= page.title
-    p.p-footer__copyright &copy;&nbsp;#{siteInfo.siteName}
+    p.p-footer__copyright &copy;&nbsp;2020&nbsp;-
+      script(type="text/javascript" language="JavaScript")
+        | current = new Date();
+        | document.write(current.getFullYear() + '&nbsp;')
+      = siteInfo.siteName
 
 script(src="/js/script.js")
