三項演算子でheaderタグのclassを出し分け

--- a/_assets/pug/common/_header.pug
+++ b/_assets/pug/common/_header.pug
@@ -1,4 +1,4 @@
-header.l-header.p-header
+header(class=(pageId == 'home') ? 'l-header p-header' : 'l-header p-header p-header--sub')
   .l-container.p-header__container
     .p-header__inner
       if pageId == 'home'
