.testのJSの記述を削除

--- a/_assets/pug/blog/index.pug
+++ b/_assets/pug/blog/index.pug
@@ -14,4 +14,4 @@ block content
       .l-container.blog-main-area__container
         h2.blog-main-area__title ブログのタイトルが入ります。ブログのタイトルが入ります。ブログのタイトルが入ります。
         p.home-about__description ブログの説明文が入ります。ブログの説明文が入ります。ブログの説明文が入ります。
-        .test.js-test テスト
+        .test テスト
