--- a/_assets/pug/index.pug
+++ b/_assets/pug/index.pug
@@ -14,4 +14,4 @@ block content
       .l-container.home-about__container
         h2.home-about__title タイトルが入ります。タイトルが入ります。タイトルが入ります。
         p.home-about__description 説明文が入ります。説明文が入ります。説明文が入ります。
-        .test.js-test テスト
+        .test テスト
