トップへ戻るボタンを追加

--- a/_assets/pug/common/_footer.pug
+++ b/_assets/pug/common/_footer.pug
@@ -10,4 +10,7 @@ footer.l-footer.p-footer
         | document.write(current.getFullYear() + '&nbsp;')
       = siteInfo.siteName
 
+button.l-to-top.c-to-top.js-to-top
+
+script(src="/js/lib/smoothscroll.js")
 script(src="/js/script.js")
