--- a/_assets/pug/common/_footer.pug
+++ b/_assets/pug/common/_footer.pug
@@ -12,5 +12,6 @@ footer.l-footer.p-footer
 
 button.l-to-top.c-to-top.js-to-top
 
+// JavaScript 
 script(src="/js/lib/smoothscroll.js")
 script(src="/js/script.js")
