自動キャッシュクリアの機能追加

--- a/_assets/pug/common/_footer.pug
+++ b/_assets/pug/common/_footer.pug
@@ -14,4 +14,4 @@ button.l-to-top.c-to-top.js-to-top
 
 // JavaScript 
 script(src="/js/lib/smoothscroll.js")
-script(src="/js/script.js")
+script(src="/js/script.js?ver")
