--- a/_assets/pug/common/_head.pug
+++ b/_assets/pug/common/_head.pug
@@ -25,8 +25,8 @@ head(prefix=`og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# ${pages[pageId].type
   // クローラー 
   meta(name="robots" content="noindex, nofollow")
   // CSS 
-  link(rel="stylesheet" href="/css/style.css")
+  link(rel="stylesheet" href="/css/style.css?ver")
   if pageId == 'blog'
-    link(rel="stylesheet", href="/css/blog.css")
+    link(rel="stylesheet", href="/css/blog.css?ver")
   // jQuery 
   script(src="/js/lib/jquery-3.6.0.min.js")
