閉じタグコメントを追加

--- a/src/pug/common/_header.pug
+++ b/src/pug/common/_header.pug
@@ -12,3 +12,8 @@ header(class=(pageId == 'home') ? 'l-header p-header' : 'l-header p-header p-hea
               li.is-current= page.title
             else
               li: a(href=page.slug)= page.title
+        <!-- /.p-gnav__items -->
+      <!-- /.p-header__nav p-gnav -->
+    <!-- /.p-header__inner -->
+  <!-- /.l-container p-header__container -->
+<!-- /.l-header p-header -->
