--- a/src/pug/common/_footer.pug
+++ b/src/pug/common/_footer.pug
@@ -4,11 +4,15 @@ footer.l-footer.p-footer
       ul.p-footer-nav__items
         each page in pages
           li: a(href=page.slug)= page.title
+      <!-- /.p-footer-nav__items -->
+    <!-- /.p-footer__nav p-footer-nav -->
     p.p-footer__copyright &copy;&nbsp;2020&nbsp;-
       script(type="text/javascript" language="JavaScript")
         | current = new Date();
         | document.write(current.getFullYear() + '&nbsp;')
       = siteInfo.siteName
+  <!-- /.l-container p-footer__container -->
+<!-- /.l-footer p-footer -->
 
 button.l-to-top.c-to-top.js-to-top
 
