トップへ戻るボタンの修正

--- a/src/pug/common/_footer.pug
+++ b/src/pug/common/_footer.pug
@@ -14,7 +14,7 @@ footer.l-footer.p-footer
   <!-- /.l-container p-footer__container -->
 <!-- /.l-footer p-footer -->
 
-button.l-to-top.c-to-top.js-to-top
+button.l-button-to-top.c-button-to-top.js-button-to-top
 
 // JavaScript 
 script(src="/js/lib/smoothscroll.js")
