--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,20 +4,21 @@ block pageId
   - let pageId = 'home';
 
 block content
-  main.l-home
-    .l-home__mv.l-home-mv.home-mv
-      .l-container.home-mv__container
-        .home-mv__content
-          .home-mv__title トップページ
-        <!-- /.home-mv__content -->
-      <!-- /.l-container home-mv__container -->
-    <!-- /.l-home__mv l-home-mv home-mv -->
+  .l-home
+    main
+      .l-home__mv.l-home-mv.home-mv
+        .l-container.home-mv__container
+          .home-mv__content
+            .home-mv__title トップページ
+          <!-- /.home-mv__content -->
+        <!-- /.l-container home-mv__container -->
+      <!-- /.l-home__mv l-home-mv home-mv -->
 
-    section.l-home__about.home-about
-      .l-container.home-about__container
-        h2.home-about__title タイトルが入ります。タイトルが入ります。タイトルが入ります。
-        p.home-about__description 説明文が入ります。説明文が入ります。説明文が入ります。
-        .test テスト
-      <!-- /.l-container home-about__container -->
-    <!-- /.l-home__about home-about -->
+      section.l-home__about.home-about
+        .l-container.home-about__container
+          h2.home-about__title タイトルが入ります。タイトルが入ります。タイトルが入ります。
+          p.home-about__description 説明文が入ります。説明文が入ります。説明文が入ります。
+          .test テスト
+        <!-- /.l-container home-about__container -->
+      <!-- /.l-home__about home-about -->
   <!-- /.l-home -->
