--- a/src/pug/common/_footer.pug
+++ b/src/pug/common/_footer.pug
@@ -6,7 +6,8 @@ footer.l-footer.p-footer
           li: a(href=page.slug)= page.title
       <!-- /.p-footer-nav__items -->
     <!-- /.p-footer__nav p-footer-nav -->
-    p.p-footer__copyright &copy;&nbsp;2020&nbsp;-
+    p.p-footer__copyright
+      | &copy;&nbsp;2020&nbsp;-
       script(type="text/javascript" language="JavaScript")
         | current = new Date();
         | document.write(current.getFullYear() + '&nbsp;')
