--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,19 +6,8 @@ block pageId
 block content
   .l-home
     main
-      .l-home__mv.l-home-mv.home-mv
-        .l-container.home-mv__container
-          .home-mv__content
-            .home-mv__title トップページ
-          <!-- /.home-mv__content -->
-        <!-- /.l-container home-mv__container -->
-      <!-- /.l-home__mv l-home-mv home-mv -->
-
-      section.l-home__about.home-about
-        .l-container.home-about__container
-          h2.home-about__title タイトルが入ります。タイトルが入ります。タイトルが入ります。
-          p.home-about__description 説明文が入ります。説明文が入ります。説明文が入ります。
-          .test テスト
-        <!-- /.l-container home-about__container -->
-      <!-- /.l-home__about home-about -->
+      .l-container
+        | トップページです。
+        .test テスト
+      <!-- /.l-container -->
   <!-- /.l-home -->
